# gbemu

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
gbemu/: CMakeLists.txt
gbemu/gbemu/: main.cpp
grebe/: CMakeLists.txt
grebe/grebe/: main.cpp
libgbemu/: CMakeLists.txt
libgbemu/libgbemu/: cpu.cpp  cpu.hpp  cpu.test.cpp  cpu_8bit_alu.test.cpp  cpu_8bit_loads.test.cpp  memory.cpp  memory.hpp  memory.test.cpp  memory_loader.cpp  memory_loader.hpp  registers.cpp  registers.hpp  registers.test.cpp  state.cpp  state.hpp  types.hpp
libgrebe/: CMakeLists.txt
libgrebe/libgrebe/: cpu.cpp  cpu.hpp  cpu.test.cpp  cpu.test.hpp  cpu_8bit_alu.test.cpp  cpu_8bit_loads.test.cpp  cpu_alu.test.cpp  cpu_bit_ops.test.cpp  cpu_control_flow.test.cpp  cpu_decoders.cpp  cpu_loads.test.cpp  cpu_opcodes.cpp  decoder.cpp  decoder.hpp  instructions.cpp  instructions.hpp  interrupt_handler.cpp  interrupt_handler.hpp  memory.cpp  memory.hpp  memory.test.cpp  memory_loader.cpp  memory_loader.hpp  memory_locations.hpp  opcodes.hpp  registers.cpp  registers.test.cpp  state.cpp  state.hpp  types.hpp  utils.cpp  utils.hpp
libgrebe/libgrebe/common/: addressable.hpp  state_mutator.hpp  synchronous_component.hpp
libgrebe/libgrebe/core/: common.test.cpp  common.test.hpp  core.cpp  core.hpp  core.test.cpp  core.test.hpp  cpu.cpp  cpu.hpp  cpu.test.cpp  cpu.test.hpp  cpu_alu.test.cpp  cpu_bit_ops.test.cpp  cpu_control_flow.test.cpp  cpu_loads.test.cpp  decoder.cpp  decoder.hpp  instructions.cpp  instructions.hpp  interrupt_handler.cpp  interrupt_handler.hpp  memory.cpp  memory.hpp  memory.test.cpp  mmu.cpp  mmu.hpp  mmu.test.cpp  registers.cpp  registers.hpp  registers.test.cpp
libgrebe/libgrebe/core/cpu/: control_unit.cpp  control_unit.hpp  control_unit.test.cpp  control_unit.test.hpp  control_unit_alu.test.cpp  control_unit_alu_adc.test.cpp  control_unit_alu_add.test.cpp  control_unit_alu_and.test.cpp  control_unit_alu_cp.test.cpp  control_unit_alu_dec.test.cpp  control_unit_alu_inc.test.cpp  control_unit_alu_or.test.cpp  control_unit_alu_sbc.test.cpp  control_unit_alu_sub.test.cpp  control_unit_alu_xor.test.cpp  control_unit_bit_ops.test.cpp  control_unit_bit_ops_bit.test.cpp  control_unit_bit_ops_res.test.cpp  control_unit_bit_ops_rl.test.cpp  control_unit_bit_ops_rlc.test.cpp  control_unit_bit_ops_rr.test.cpp  control_unit_bit_ops_rrc.test.cpp  control_unit_bit_ops_set.test.cpp  control_unit_bit_ops_sla.test.cpp  control_unit_bit_ops_sra.test.cpp  control_unit_bit_ops_srl.test.cpp  control_unit_bit_ops_swap.test.cpp  control_unit_control_flow.test.cpp  control_unit_loads.test.cpp  cpu.cpp  cpu.hpp  cpu.test.cpp  cpu.test.hpp  cpu_alu.test.cpp  cpu_bit_ops.test.cpp  cpu_control_flow.test.cpp  cpu_loads.test.cpp  decoder.cpp  decoder.hpp  instructions.cpp  (+11 more)
libgrebe/libgrebe/core/mmu/: bootrom.cpp  bootrom.hpp  hardware_registers.cpp  hardware_registers.hpp  hardware_registers.test.cpp  hardware_registers_addressable.cpp  hardware_registers_addressable.hpp  hram.cpp  hram.hpp  mmu.cpp  mmu.hpp  mmu.test.cpp  mmu.test.hpp  vram.cpp  vram.hpp  wram.cpp  wram.hpp
libgrebe/libgrebe/core/ppu/: ppu.cpp  ppu.hpp
libgrebe/libgrebe/display/: lcd.cpp  lcd.hpp  ppu.cpp  ppu.hpp
libs/: CMakeLists.txt
